removing height to see if that fixes overflow

--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -1,5 +1,5 @@
 #home {
-   height: 100vh;
+   
    background: url(../images/triangles.png) no-repeat center center fixed, linear-gradient(0deg, #6723C6 0%, rgba(0, 239, 181, 0.87) 100%);
    background-position: center;
    background-repeat: no-repeat;
